[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wow_ironman_gen"
version = "1.1.0"
requires-python = ">= 3.8"
dependencies = [
    "pytest",
    "flake8",
    "pytest-cov"
]
authors = [{name = "Richard W. Norton", email = "rwtnorton@gmail.com"}]
license = {text = "MIT License"}
readme = "README.rst"

[project.scripts]
wow_ironman_gen-cli = "wow_ironman_gen:main_cli"
